--- a/package.json
+++ b/package.json
@@ -20,26 +20,33 @@
     "@angular/http": "5.0.1",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
-    "@ionic-native/camera": "^4.5.2",
+    "@ionic-native/camera": "^4.6.0",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/crop": "^4.5.2",
+    "@ionic-native/file": "^4.6.0",
+    "@ionic-native/file-path": "^4.6.0",
+    "@ionic-native/file-transfer": "^4.6.0",
     "@ionic-native/image-picker": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/transfer": "^3.14.0",
     "@ionic/storage": "^2.1.3",
     "angular-signature-pad": "0.0.14",
     "angular2-signaturepad": "^2.6.1",
-    "com.synconset.imagepicker": "~2.1.8",
+    "com.synconset.imagepicker": "^2.1.10",
     "cordova": "8.0.0",
     "cordova-android": "^6.3.0",
-    "cordova-plugin-camera": "^4.0.1",
+    "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-crop": "^0.4.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-image-picker": "^1.1.3",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-telerik-imagepicker": "^2.1.8",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -66,8 +73,13 @@
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
       },
       "cordova-plugin-camera": {},
-      "cordova-plugin-crop": {}
+      "cordova-plugin-crop": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filepath": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
